<resources>
    <string name="app_name">Groovix</string>
    <string name="title_activity_admin_homed">AdminHomedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_users">Users</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_artis">Artis</string>
    <string name="menu_album">Album</string>
    <string name="menu_genre">Genre</string>
    <string name="menu_logout">Logout</string>


</resources>