<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_baseline_queue_music_24"
            android:title="@string/menu_playlist" />
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_artis" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_baseline_album_24"
            android:title="@string/menu_album" />
        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_baseline_library_music_24"
            android:title="@string/menu_genre" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>